[gd_scene load_steps=47 format=3 uid="uid://bd1namo62lvmy"]

[ext_resource type="Texture2D" uid="uid://bu0ukm8j5met0" path="res://Assets/Hero/AnimationSheet_Character.png" id="1_1ks78"]
[ext_resource type="Script" path="res://Scenes/Hero.gd" id="1_g6md0"]
[ext_resource type="AudioStream" uid="uid://dc13yvsr047er" path="res://Assets/SFX/30_Jump_03.wav" id="3_eugyh"]
[ext_resource type="Texture2D" uid="uid://kpbxg2jujsp8" path="res://Assets/Hero/Dmg.png" id="3_fw2a5"]
[ext_resource type="AudioStream" uid="uid://ne7rjgnll5jn" path="res://Assets/SFX/56_Attack_03.wav" id="4_o02hk"]
[ext_resource type="AudioStream" uid="uid://ck8ieingwcalo" path="res://Assets/SFX/0.ogg" id="6_077i2"]
[ext_resource type="AudioStream" uid="uid://ujpgti48i224" path="res://Assets/SFX/slime.3.ogg" id="7_qk5xw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hexxx"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7ikrv"]
atlas = ExtResource("1_1ks78")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_58ici"]
atlas = ExtResource("1_1ks78")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmicj"]
atlas = ExtResource("1_1ks78")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgrrh"]
atlas = ExtResource("1_1ks78")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d0ki"]
atlas = ExtResource("1_1ks78")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebfyv"]
atlas = ExtResource("1_1ks78")
region = Rect2(160, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox8ua"]
atlas = ExtResource("1_1ks78")
region = Rect2(192, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ntr8"]
atlas = ExtResource("1_1ks78")
region = Rect2(224, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6elck"]
atlas = ExtResource("3_fw2a5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0l4o"]
atlas = ExtResource("3_fw2a5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4pfy"]
atlas = ExtResource("3_fw2a5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq8of"]
atlas = ExtResource("3_fw2a5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh0jq"]
atlas = ExtResource("1_1ks78")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vls1c"]
atlas = ExtResource("1_1ks78")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4rq2"]
atlas = ExtResource("1_1ks78")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_66eej"]
atlas = ExtResource("1_1ks78")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwfm6"]
atlas = ExtResource("1_1ks78")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15oqe"]
atlas = ExtResource("1_1ks78")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c1xx"]
atlas = ExtResource("1_1ks78")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu7p0"]
atlas = ExtResource("1_1ks78")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssw6x"]
atlas = ExtResource("1_1ks78")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkfb6"]
atlas = ExtResource("1_1ks78")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l28be"]
atlas = ExtResource("1_1ks78")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xvig"]
atlas = ExtResource("1_1ks78")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_av8d4"]
atlas = ExtResource("1_1ks78")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fssl4"]
atlas = ExtResource("1_1ks78")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kexw"]
atlas = ExtResource("1_1ks78")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpsgd"]
atlas = ExtResource("1_1ks78")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a7f6"]
atlas = ExtResource("1_1ks78")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqlct"]
atlas = ExtResource("1_1ks78")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_52da8"]
atlas = ExtResource("1_1ks78")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b0uw"]
atlas = ExtResource("1_1ks78")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tqlf"]
atlas = ExtResource("1_1ks78")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_liilx"]
atlas = ExtResource("1_1ks78")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17hho"]
atlas = ExtResource("1_1ks78")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6n32"]
atlas = ExtResource("1_1ks78")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cjwc4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ikrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58ici")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmicj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgrrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d0ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebfyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox8ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ntr8")
}],
"loop": true,
"name": &"attack",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6elck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0l4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4pfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq8of")
}],
"loop": true,
"name": &"damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh0jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vls1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4rq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66eej")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwfm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15oqe")
}],
"loop": true,
"name": &"fall",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c1xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu7p0")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssw6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkfb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l28be")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xvig")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_av8d4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fssl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kexw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpsgd")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a7f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqlct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52da8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b0uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tqlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liilx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17hho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6n32")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2h0l"]
size = Vector2(38, 40)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_g6md0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hexxx")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -2)
sprite_frames = SubResource("SpriteFrames_cjwc4")
animation = &"idle"
frame_progress = 0.468558

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(8, 8)

[node name="Area2D" type="Area2D" parent="."]

[node name="DamageArea" type="CollisionShape2D" parent="Area2D"]
position = Vector2(29, -5)
shape = SubResource("RectangleShape2D_k2h0l")
disabled = true

[node name="Timer" type="Timer" parent="."]

[node name="Dead" type="Timer" parent="."]

[node name="Audio" type="Node2D" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_eugyh")
volume_db = -10.0

[node name="Attack" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_o02hk")
volume_db = -10.0

[node name="Hit_bones" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_077i2")

[node name="Hit_slime" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_qk5xw")
volume_db = -20.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Dead" to="." method="_on_dead_timeout"]
